# Censor-Bars

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bar.html  index.html  package-lock.json  package.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/design/: architecture.md
docs/user-guide/: getting-started.md
scripts/: build-windows.ps1
src/: bar.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bar.rs  group.rs  history.rs  mod.rs  persist.rs
src-tauri/src/config/: mod.rs
src-tauri/src/models/: bar.rs  mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: mod.rs  persistence.rs
src/styles/: bar.css  control-panel.css  main.css
