[package]
name = "censor-bars"
version = "0.1.0"
description = "Privacy screen overlay — resizable censor bars for screen sharing protection"
authors = ["Phillip Rajcany <phillip@nexusfoundry.dev>"]
license = "MIT"
repository = "https://github.com/phillip-Nexus-Foundry/Censor-Bars"
edition = "2021"
rust-version = "1.70"

[lib]
name = "censor_bars_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
